2012-12-28  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: "text"-type tracks in MP4 files are only
        treated as chapters if their track ID is listed on a "chap" atom
        inside a "tref" track reference atom. Fixes #815.

2012-12-27  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mmg: new feature: Implemented splitting by chapter
	numbers. Implements #504 and #814.

2012-12-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Removed several warnings from the MPEG-2
	video parser code about open GOPs, missing references. Those were
	too confusing for most users, even after being given additional
	information via email and FAQs.

	* mkvextract: new feature: Implemented extraction of ALAC into
	Core Audio Format files (CAF). Implements #786.

2012-12-23  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mmg: new feature: Implemented splitting by frame/field
	numbers. Implements #771.

	* mmg: bug fix: Fixed consistency checks when appending files and
	at least one track is disabled.

	* mkvmerge: new feature: Implemented a reader for the
	Flash Video format (.flv). Implements #735.

2012-12-22  Moritz Bunkus  <moritz@bunkus.org>

	* Build system: Boost's "variant" library is now required.

2012-12-17  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: ISO 639-2 language handling: The deprecated
	language codes "scr", "scc" and "mol" are replaced by their
	respective successors "hrv", "srp" and "rum". Fixes #803.

	* mkvmerge: bug fix: Matroska reader: Fixed finding the "segment
	info" element if it is located behind the clusters.

2012-12-16  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: MP3 parser code: Fixed skipping ID3 tags so
	that the header directly behind the ID3 tag is recognized
	properly. Fixes #747.

	* mkvmerge: bug fix: MP4 reader: Fixed handling of edit lists if
	the edit list is used to adjust the track's timecodes by a fixed
	amount (either positive or negative). Fixes #780.
