@@ -223,6 +223,7 @@ protected:
   virtual bool verify_acm_audio_track(kax_track_t *t);
   virtual bool verify_alac_audio_track(kax_track_t *t);
   virtual bool verify_flac_audio_track(kax_track_t *t);
+  virtual bool verify_opus_audio_track(kax_track_t *t);
   virtual bool verify_vorbis_audio_track(kax_track_t *t);
   virtual void verify_audio_track(kax_track_t *t);
   virtual bool verify_mscomp_video_track(kax_track_t *t);
@@ -256,6 +257,7 @@ protected:
   virtual void create_flac_audio_packetizer(kax_track_t *t, track_info_c &nti);
 #endif
   virtual void create_mp3_audio_packetizer(kax_track_t *t, track_info_c &nti);
+  virtual void create_opus_audio_packetizer(kax_track_t *t, track_info_c &nti);
   virtual void create_pcm_audio_packetizer(kax_track_t *t, track_info_c &nti);
   virtual void create_tta_audio_packetizer(kax_track_t *t, track_info_c &nti);
   virtual void create_vorbis_audio_packetizer(kax_track_t *t, track_info_c &nti);
