@@ -32,6 +32,7 @@ enum ogm_stream_type_e {
   OGM_STREAM_TYPE_A_FLAC,
   OGM_STREAM_TYPE_A_MP2,
   OGM_STREAM_TYPE_A_MP3,
+  OGM_STREAM_TYPE_A_OPUS,
   OGM_STREAM_TYPE_A_PCM,
   OGM_STREAM_TYPE_A_VORBIS,
   OGM_STREAM_TYPE_S_KATE,
