@@ -1,3 +1,8 @@
+2012-12-31  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: new feature: Added experimental support for the Opus
+        audio codec. Parts of an implementation of #779.
+
 2012-12-28  Moritz Bunkus  <moritz@bunkus.org>
 
         * mkvmerge: bug fix: "text"-type tracks in MP4 files are only
